# Projeto_Avengres

./: README.md  pyproject.toml
src/: main.ipynb  main.py
